[gd_scene load_steps=7 format=3 uid="uid://dddnrstw6lua3"]

[ext_resource type="Script" uid="uid://bm1mo8lejiyca" path="res://menu.gd" id="1_lti8b"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.16, 0.678, 1, 0.12549)

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.266667, 0.266667, 0.266667, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.4, 0.4, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.333333, 0.333333, 0.333333, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.266667, 0.266667, 0.266667, 1)
border_blend = true

[sub_resource type="Theme" id="5"]
Button/colors/font_color = Color(0.88, 0.88, 0.88, 1)
Button/colors/font_color_disabled = Color(0.9, 0.9, 0.9, 0.2)
Button/colors/font_color_hover = Color(0.94, 0.94, 0.94, 1)
Button/colors/font_color_pressed = Color(1, 1, 1, 1)
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource("1")
Button/styles/hover = SubResource("2")
Button/styles/normal = SubResource("3")
Button/styles/pressed = SubResource("4")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("5")
script = ExtResource("1_lti8b")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -253.0
offset_right = 3.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Lost In Space"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Start Game"

[node name="Button2" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Exit"

[node name="Panel2" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = 126.0
offset_right = 3.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="MarginContainer" type="MarginContainer" parent="Panel2"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You lost!
Score: 0"
horizontal_alignment = 1

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Button2" to="." method="_on_button2_pressed"]
